feat : add swagger schemas and handlers
