# cmd/api/main.go
@@ -1,41 +1,27 @@
 package main
 
 import (
-   "github.com/gin-gonic/gin"
-   docs "github.com/jason810496/Dcard-Advertisement-API/docs"
-   swaggerfiles "github.com/swaggo/files"
-   ginSwagger "github.com/swaggo/gin-swagger"
-   "net/http"
+	"github.com/jason810496/Dcard-Advertisement-API/pkg/handlers"
+	// "net/http"
+
+	// "github.com/gin-gonic/gin"
+	docs "github.com/jason810496/Dcard-Advertisement-API/docs"
+	swaggerfiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
-// @BasePath /api/v1
 
-// PingExample godoc
-// @Summary ping example
-// @Schemes
-// @Description do ping
-// @Tags example
-// @Accept json
-// @Produce json
-// @Success 200 {string} Helloworld
-// @Router /example/helloworld [get]
-func Helloworld(g *gin.Context)  {
-   g.JSON(http.StatusOK,"helloworld")
-}
+func main() {
 
-func main()  {
-   router := gin.Default()
-   docs.SwaggerInfo.BasePath = "/api/v1"
-   v1_router := router.Group("/api/v1")
-   {
-      hello_example := v1_router.Group("/example")
-      {
-         hello_example.GET("/helloworld",Helloworld)
-      }
-   }
-   router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
-   
-   router.Run(":8080")
+	docs.SwaggerInfo.Title = "Dcard Advertisement API"
+	docs.SwaggerInfo.Description = "This is a swagger for Dcard Backend Intern 2024"
+	docs.SwaggerInfo.Version = "1.0"
+	docs.SwaggerInfo.Host = "0.0.0.0:8080"
+	docs.SwaggerInfo.BasePath = ""
+	docs.SwaggerInfo.Schemes = []string{"http", "https"}
 
+	router := handlers.SetupRouter()
 
-   
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+	router.Run(":8080")
+
 }
