# pkg/schemas/general.go
@@ -1,0 +1,7 @@
+package schemas
+
+// HTTPError example
+type HTTPError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"status bad request"`
+}
